I303C_Sécurité/alain_ninane/40-SeÌcuriteÌ-2017/IpTables-171124/iptables.txt
# Generated by iptables-save v1.2.11 on Fri Apr 15 14:53:48 2005
*nat
:PREROUTING ACCEPT [2202:183022]
-A PREROUTING -s 130.104.0.0/16 -i eth0 -p tcp -m tcp --dport 8080 -j REDIRECT --to-ports 3128
-A PREROUTING -s 192.168.0.0/16 -i eth0 -p tcp -m tcp --dport 8080 -j REDIRECT --to-ports 3128
:POSTROUTING ACCEPT [5:316]
:OUTPUT ACCEPT [5:316]
-A POSTROUTING -s 10.0.0.0/255.255.255.0 -o eth0 -j MASQUERADE
-A PREROUTING -i eth0 -p tcp -m tcp --dport 122 -j DNAT --to-destination 10.0.0.43:22
COMMIT
# Completed on Fri Apr 15 14:53:48 2005
# Generated by iptables-save v1.2.11 on Fri Apr 15 14:53:48 2005
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [18727:12993949]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -s 130.104.200.16 -j ACCEPT
-A RH-Firewall-1-INPUT -i eth0 -d 130.104.201.255 -j DROP
-A RH-Firewall-1-INPUT -i eth0 -d 130.104.200.16 -j ACCEPT
-A RH-Firewall-1-INPUT -i eth1 -d 10.0.0.255      -j DROP
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -i eth1 -p tcp --syn -j ACCEPT
-A RH-Firewall-1-INPUT -i eth1 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport  53 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 123 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m udp -p udp --source 130.104.0.0/16   --dport 514  -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m udp -p udp --source 192.168.0.0/16   --dport 514  -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 130.104.60.76/32 --dport 513 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 130.104.60.76/32 --dport 514 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 192.168.251.232/29 --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 130.104.0.0/16   --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 81.240.0.0/14    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 81.244.0.0/14    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 217.136.0.0/16   --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 83.134.0.0/16    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 62.235.0.0/16    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 85.201.0.0/18    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 87.64.0.0/14     --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 83.176.0.0/12    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 213.189.160.0/19 --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 91.176.0.0/14    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 85.10.64.0/20    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 159.93.0.0/16    --dport 22   -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 130.104.0.0/255.255.0.0 --dport 8080 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 192.168.0.0/255.255.0.0 --dport 8080 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 130.104.0.0/255.255.0.0 --dport 3128 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 192.168.0.0/255.255.0.0 --dport 3128 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --source 130.104.0.0/16 --dport 3306 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 631 -j ACCEPT
-A RH-Firewall-1-INPUT -j LOG
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Fri Apr 15 14:53:48 2005
